vc-project/dev/init-platform.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader
  template:
    metadata:
      labels:
        app: uploader
    spec:
      containers:
      - name: minijob
        image: python:slim
        command:
            - "echo 11"
        volumeMounts:
            - mountPath: "/mnt/data"
              name: modules-data
      volumes:
      - name: cms-content-data
        persistentVolumeClaim:
          claimName: cms-pv-volume
      - name: modules-data
        persistentVolumeClaim:
          claimName: modules-pv-volume
