vc-project/dev/uploader.yaml
# apiVersion: batch/v1
# kind: Job
# metadata:
#   name: minijob
# spec:
#   backoffLimit: 5
#   activeDeadlineSeconds: 600
#   volumes:
#     - name: modules-data
#       persistentVolumeClaim:
#         claimName: modules-pv-volume
#   template:
#     spec:
#       containers:
#       - name: minijob
#         image: apline
#         command: ["touch 1 /mnt/data"]
#         volumeMounts:
#             - mountPath: "/mnt/data"
#               name: modules-data
#       restartPolicy: Never
apiVersion: v1
kind: Pod
metadata:
    name: uploader
spec:
    containers:
      - name: minijob
        image: alpine:slim
        command:
          - "/bin/sh"
          - "-c"
        args:
          - "cat $(VC_PLATFORM_MODULES_CONFIG)"
        volumeMounts:
        - name: modules-data
          mountPath: /data
    volumes:
     - name: modules-data
       persistentVolumeClaim:
         claimName: modules-pv-volume
