vc-project/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: 20m
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: platform
            servicePort: 80
          path: /
